# netguard

./: .env.production  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  setup-dependencies.ps1  start-local.ps1  stop-local.ps1
go-services/api-gateway/: .dockerignore  .env.example  Dockerfile  Makefile  activity.go  activity_handlers.go  analytics.go  apikeys.go  audit.go  auth.go  backup.go  batch.go  cache.go  compliance.go  export.go  go.mod  go.sum  handlers.go  handlers_impl.go  main.go  middleware.go  notifications.go  performance.go  ratelimit.go  reports.go  search.go  system.go  webhooks.go  websocket.go
go-services/auth-service/: main.go
infrastructure/kubernetes/: deployment.yaml
infrastructure/monitoring/: alertmanager.yml  grafana-dashboard.json  prometheus.yml
infrastructure/monitoring/alerts/: security-alerts.yml
kubernetes/: api-gateway-deployment.yaml  namespace.yaml  secrets.yaml
netguard-app/: .env.example  .env.local  README.md  next.config.js  package-lock.json  package.json
netguard-app/src/app/: layout.tsx  page.tsx
netguard-app/src/components/: ProtectedRoute.tsx  RealTimeChart.tsx  StatsCard.tsx  ThreatsList.tsx  attack-flow-visualization.tsx  dashboard-layout.tsx
netguard-app/src/lib/: api.ts  (+2 more)
python-ml/dashboard/: main.py
securecloud-nextjs/: package-lock.json
services/api-gateway/: Dockerfile  go.mod  go.sum  main.go  main.go.backup
services/auth-service/: Dockerfile  go.mod  go.sum  main.go  main.go.backup
services/network-monitor/: Dockerfile  main.py  main.py.backup  requirements.txt
src/: main.rs
(+13 files in other folders)
