[package]
name = "netguard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <sahillather002@gmail.com>"]
description = "A network traffic monitor and threat detection system"
license = "MIT"
repository = "https://github.com/sahillather002/netguard"
keywords = ["network", "security", "firewall", "monitoring"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
# Network
pnet = "0.34"
pnet_datalink = "0.34"
pnet_packet = "0.34"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Pattern matching
regex = "1.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
lazy_static = "1.4"
rand = "0.8"

# Database (for storing alerts)
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true